# Anubis-Game-Engine

./: CMakeLists.txt  Config.hpp.in  Doxyfile.in  License.txt
Docs/: Anubis-Cookbook.docx
Examples/Example 1 - Simple Rendering/: CMakeLists.txt  Main.cpp
Examples/Example 2  - Simple TCP Comms/: CMakeLists.txt  Client.cpp  Server.cpp
Examples/Example 2  - TCP Chat/: CMakeLists.txt  Client.cpp  Server.cpp
Examples/Example 2 - Simple TCP Comms/: Client.cpp  Server.cpp
Examples/Example 3 - Simple UDP Comms/: CMakeLists.txt  Client.cpp  Server.cpp
HostTests/: TestSSE.cmake  TestSSE.cpp
Include/Anubis/: Common.hpp  Graphics.hpp  Math.hpp  Networking.hpp  Physics.hpp
Include/Anubis/Common/: Algorithms.hpp  Barrier.hpp  CircularQueue.hpp  Context.hpp  DataPack.hpp  File.hpp  Float.hpp  IdentObj.hpp  Library.hpp  Log.hpp  Memory.hpp  Misc.hpp  SubObj.hpp  System.hpp  UUID.hpp
Include/Anubis/Common/System/: SocketWrapper.hpp
Include/Anubis/Graphics/: AttributeArray.hpp  BufferObject.hpp  Camera.hpp  Colour.hpp  GLState.hpp  LODSet.hpp  Material.hpp  Mesh.hpp  MeshGenerator.hpp  MeshRef.hpp  MixedAttributeArray.hpp  PixelMap.hpp  Renderer.hpp  Shader.hpp  ShaderProgram.hpp  TextRenderer.hpp  Texture.hpp  Texture2D.hpp
Include/Anubis/Math/: Matrix4f.hpp  Quaternion.hpp  Ray.hpp  Vector2f.hpp  Vector4f.hpp
Include/Anubis/Network/: IPAddress.hpp
Include/Anubis/Networking/: IPAddress.hpp  IPEndPoint.hpp  Socket.hpp  TCPServer.hpp  UDPServer.hpp
Include/Anubis/Physics/: BoundingBox.hpp  BoundingRect.hpp  BoundingVolume.hpp  CameraNode.hpp  PhysicsContext.hpp  Scene.hpp
Include/Anubis/Simulation/: Context.hpp  Server.hpp
Libraries/: Readme.txt
Libraries/Glad/Include/glad/: glad.h
Libraries/Glad/Source/: glad.c
Source/Anubis/Common/: Algorithms.cpp  Barrier.cpp  Context.cpp  DataPack.cpp  Float.cpp  Library.cpp  Log.cpp  UUID.cpp
Source/Anubis/Common/System/: SocketWrapper.cpp
Source/Anubis/Graphics/: AttributeArray.cpp  BufferObject.cpp  Camera.cpp  GLState.cpp  Material.cpp  Mesh.cpp  MeshGenerator.cpp  MixedAttributeArray.cpp  PixelMap.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  TextRenderer.cpp  Texture.cpp  Texture2D.cpp
Source/Anubis/Math/: Matrix4f.cpp  Quaternion.cpp
Source/Anubis/Network/: IPAddress.cpp
Source/Anubis/Networking/: IPAddress.cpp  IPEndPoint.cpp  Socket.cpp  TCPServer.cpp  UDPServer.cpp
Source/Anubis/Physics/: BoundingBox.cpp  PhysicsContext.cpp  Scene.cpp
Source/Anubis/Simulation/: Context.cpp  Server.cpp
UnitTests/: CMakeLists.txt
UnitTests/Include/: FloatTests.hpp  Matrix4fTests.hpp  PhysicsTests.hpp  Vector4fTests.hpp
UnitTests/Source/: Main.cpp
